resolved z-index issue with menu

--- a/css/index.css
+++ b/css/index.css
@@ -204,7 +204,7 @@ table {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
+  position: absolute;
   max-width: 88rem;
   width: 88rem;
   height: auto;
@@ -223,11 +223,12 @@ table {
   display: none;
 }
 .menu-container .menuList {
+  position: absolute;
   display: flex;
   height: 100vh;
   width: 100%;
   background-color: #95A7B2;
-  z-index: 10;
+  z-index: 9;
   color: #FFFFFF;
   font-weight: bold;
   line-height: 8.5rem;
