--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
+    position: absolute;
     max-width: 88rem;
     width: 88rem;
     //  width: 86%;
@@ -39,18 +39,19 @@
 
 
   .menuList{
+    position: absolute;
     display: flex;
     height: 100vh;
     width: 100%;
     background-color: @menu-color;
-    z-index: 10;
+    z-index: 9;
     color: @backgroundNAV-color;
     font-weight: bold;
     line-height: 8.5rem;
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    
+
 
     a:hover{
       color: @tabHoverColor;
